Fix padding, margin of wrap

--- a/stylesheets/block/header.scss
+++ b/stylesheets/block/header.scss
@@ -2,8 +2,6 @@
 
 .header-container {
 
-  height: 600px;
-
   .header {
 
     height: 100px;
