--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 @import "./block/header.scss";
+@import "./block/main-content.scss";
 @import "./setting/size.scss";
 
 body {
@@ -32,12 +33,18 @@ a:hover { text-decoration: underline; }
 .main-container {
 
   background-color: white;
-  padding:          $padding-size-huge 0;
-  clear:            both;
+  margin-top:       500px;
+
+  &:after {
+    display: block;
+    content: "";
+    clear:   both;
+  }
 
   .content-container {
 
-    width:  960px;
-    margin: 0 auto;
+    padding: $padding-size-huge 0;
+    margin:  0 auto;
+    width:   960px;
   }
 }
